# nycriminaldata

./: .gitignore  CMakeLists.txt  CMakePresets.json  GUI.py  README.md  baseimport.py  data_reducer_for_develop_test.py  main.cpp  main.py
GUIs/: baseimport.py  data_reducer_for_develop_test.py  effects.py  inout_ui_v0.1.py  mainGUI.py  structsGUI.py
Old_GUIs/: benchmarksGUI.py  effects.py  mainGUI.py  structsGUI.py
Old_structures/: chash_table.cpp  chash_table.h  main.cpp  skip_list.h
src/: b_tree.cpp  complaint_data.h  doubly_linkedlist.h  hash_table.cpp  hash_table.h  main.cpp
structures/: b_tree.h  b_tree.py  complaint_data.py  dlinklist.py  doubly_linkedlist.cpp  doubly_linkedlist.h  hash_table.py  main.cpp  perfect_hash_table.py  priority_queue.py  skip_list.cpp  skip_list.py  trie.py
uiBusca/: ui v0.1.py
